@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2015,v 1.127 2015/01/07 00:35:13 mef Exp $
+$NetBSD: CHANGES-2015,v 1.128 2015/01/07 05:02:37 manu Exp $
 
 Changes to the packages collection and infrastructure in 2015:
 
@@ -142,3 +142,4 @@ Changes to the packages collection and infrastructure in 2015:
 	Updated audio/py-mutagen to 1.27 [drochner 2015-01-06]
 	Updated audio/picard to 1.3.1 [drochner 2015-01-06]
 	Updated www/p5-App-Nopaste to 1.003 [mef 2015-01-07]
+	Added net/nagios-plugin-dnsrbl version 0.2 [manu 2015-01-07]
